Add osx task command

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,9 @@
     "linux": {
         "command": "./gradlew"
     },
+    "osx": {
+        "command": "./gradlew"
+    },
     "group": "none",
     "problemMatcher": [],
     "tasks": [
